--- a/roles/splunk-forwarder-linux/templates/output.conf.j2
+++ b/roles/splunk-forwarder-linux/templates/output.conf.j2
@@ -1,8 +1,19 @@
-[tcpout]
-defaultGroup = splunk
-disabled = false
+{% block outputs_default %}
+[tcp]
+{% if splunk_uf_outputs_default_group %}
+defaultGroup = {{ splunk_uf_outputs_default_group }}
+{% endif %}
+{% if splunk_uf_outputs_default_extra_attributes %}
+{{ splunk_uf_outputs_default_extra_attributes }}
+{% endif %}
+{% endblock %}
 
-[tcpout:splunk]
-server = {{ splunk_enterprise }}
-
-[tcpout-server://{{ splunk_enterprise }}]
+{% block target_groups %}
+{% for target_group in splunk_uf_outputs_target_groups %}
+[tcpout:{{ target_group.name }}]
+server = {{ target_group.server }}
+{% if target_group.compressed is defined %}
+compressed = {{ target_group.compressed }}
+{% endif %}
+{% endfor %}
+{% endblock %}
